make refactor context to contain dir, db, bin, daq_systems, & daq_readers

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "exp = Experiment('test_experiment').connect(\n",
-    "    directory='./some/path/',\n",
+    "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    daq_systems=daqs,\n",
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x10ce95b20>,\n",
-       " <ndi.core.Probe at 0x10ceeae80>,\n",
-       " <ndi.core.Probe at 0x10ceeaac0>]"
+       "[<ndi.core.Probe at 0x105cd5460>,\n",
+       " <ndi.core.Probe at 0x105cd5d00>,\n",
+       " <ndi.core.Probe at 0x105cd5220>]"
       ]
      },
      "execution_count": 9,
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x121d494f0>,\n",
-       " <ndi.document.Document at 0x121e0f040>,\n",
-       " <ndi.document.Document at 0x121e0f0d0>]"
+       "[<ndi.document.Document at 0x11f016ca0>,\n",
+       " <ndi.document.Document at 0x11f07fb50>,\n",
+       " <ndi.document.Document at 0x11f07fc10>]"
       ]
      },
      "execution_count": 12,
@@ -192,23 +192,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x121e0f670>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x121e0f610>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x121dfd0d0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x121dfdbe0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x121dfdf10>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x121df8490>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x11efea7f0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x111ee74f0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x111ee72e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11f0ba9d0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11f0bafa0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11f0bac70>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x121e0f670>,\n",
-       " <ndi.core.Channel at 0x121e0f610>,\n",
-       " <ndi.core.Channel at 0x121dfd0d0>,\n",
-       " <ndi.core.Channel at 0x121dfdbe0>,\n",
-       " <ndi.core.Channel at 0x121dfdf10>,\n",
-       " <ndi.core.Channel at 0x121df8490>]"
+       "[<ndi.core.Channel at 0x11efea7f0>,\n",
+       " <ndi.core.Channel at 0x111ee74f0>,\n",
+       " <ndi.core.Channel at 0x111ee72e0>,\n",
+       " <ndi.core.Channel at 0x11f0ba9d0>,\n",
+       " <ndi.core.Channel at 0x11f0bafa0>,\n",
+       " <ndi.core.Channel at 0x11f0bac70>]"
       ]
      },
      "execution_count": 13,
@@ -237,9 +237,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x121e0f250>,\n",
-       " <ndi.document.Document at 0x121e0ff70>,\n",
-       " <ndi.document.Document at 0x121e0fb50>]"
+       "[<ndi.document.Document at 0x11f078550>,\n",
+       " <ndi.document.Document at 0x11f0787c0>,\n",
+       " <ndi.document.Document at 0x11f0ad1c0>]"
       ]
      },
      "execution_count": 15,
@@ -271,13 +271,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
+       "  'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['216f998817fb4e938742ef8a32aa6acd'],\n",
+       " '_depends_on': ['9ef4e27a2a19489c92c757d64c7bd979'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "exp.ctx.find_by_id(doc.id).data"
+    "exp.ctx.db.find_by_id(doc.id).data"
    ]
   },
   {
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x121dfde20>}"
+       "{'doc': <ndi.document.Document at 0x11f0c1b50>}"
       ]
      },
      "execution_count": 18,
@@ -319,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a8eee5106e834b2e8cf9356a4909827a\n"
+      "a34c3a7a28e94cfaa69ade426ef23b8f\n"
      ]
     }
    ],
@@ -387,13 +387,13 @@
       "text/plain": [
        "[{'_metadata': {'name': 'list-doc',\n",
        "   'type': '',\n",
-       "   'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
+       "   'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
        "   'latest_version': True},\n",
        "  '_dependencies': {},\n",
-       "  '_depends_on': ['216f998817fb4e938742ef8a32aa6acd'],\n",
+       "  '_depends_on': ['9ef4e27a2a19489c92c757d64c7bd979'],\n",
        "  'list': ['abc', 'def', 'ghi']}]"
       ]
      },
@@ -425,12 +425,12 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
+       "  'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'list-doc': 'd319b9e960f64fefbd9d89dd5913d04a'},\n",
+       " '_dependencies': {'list-doc': '43e9a5900f824d5698350f60a855d7d8'},\n",
        " '_depends_on': []}"
       ]
      },
@@ -457,7 +457,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_abacadaba',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '1d17bbe886bb4f1f816642f0a8a06bce',\n",
+       "  'experiment_id': '00756d55432449a4b80414256706e7d0',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
