--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (9cd7a6f2af5347f3aa1da88a969f8de1). It will be minimally functional until connected.\n"
+      "Warning: Experiment.connect() has not been run on this experiment (7dc3c8db1946437cb2344347b88f4b93). It will be minimally functional until connected.\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (9cd7a6f2af5347f3aa1da88a969f8de1). It will be minimally functional until connected.\n"
+      "Warning: Experiment.connect() has not been run on this experiment (7dc3c8db1946437cb2344347b88f4b93). It will be minimally functional until connected.\n"
      ]
     },
     {
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.document.Document object at 0x10e23a9d0>, <ndi.document.Document object at 0x127171160>]\n"
+      "[<ndi.document.Document object at 0x1115ffeb0>, <ndi.document.Document object at 0x12a4acb50>]\n"
      ]
     }
    ],
@@ -200,13 +200,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '9cd7a6f2af5347f3aa1da88a969f8de1', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '7dc3c8db1946437cb2344347b88f4b93', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 13,
@@ -216,7 +216,7 @@
    ],
    "source": [
     "print(ds_results[0].data)\n",
-    "e.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
+    "e.ctx.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
    ]
   },
   {
@@ -227,10 +227,10 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1271710d0>,\n",
-       " <ndi.document.Document at 0x1271717f0>,\n",
-       " <ndi.document.Document at 0x127171610>,\n",
-       " <ndi.document.Document at 0x127171580>]"
+       "[<ndi.document.Document at 0x12a4ac400>,\n",
+       " <ndi.document.Document at 0x12a4bc160>,\n",
+       " <ndi.document.Document at 0x12a4bc220>,\n",
+       " <ndi.document.Document at 0x12a4bc340>]"
       ]
      },
      "execution_count": 14,
