--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.document.Document object at 0x125107580>\n"
+      "<ndi.document.Document object at 0x128e99f70>\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '5ad366429cdf4f66a8ded5a71203624a', 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '5ad366429cdf4f66a8ded5a71203624a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}, 'ctx': <ndi.database.sql.SQL object at 0x10bebc190>}\n"
+      "{'id': '4e30f283ee1945daac2f1cd1672a1dd3', 'ctx': <ndi.context.Context object at 0x128f22f10>, 'binary': <ndi.document.BinaryWrapper object at 0x128f22e80>, 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '4e30f283ee1945daac2f1cd1672a1dd3', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}}\n"
      ]
     }
    ],
