--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -80,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "'50748ada1e1641749379395afda9bb5d'"
+       "'d0d7e6feb43541a690306a1ba6d7e1bb'"
       ]
      },
      "execution_count": 7,
@@ -107,7 +107,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '82052803e4264932a6bf046740a92e20'},\n",
+       " '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -145,7 +145,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '82052803e4264932a6bf046740a92e20'},\n",
+       " '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x11702ea90>}"
+       "{'force': <ndi.document.Document at 0x10bdf4df0>}"
       ]
      },
      "execution_count": 11,
@@ -194,7 +194,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x11702ea90>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x10bdf4df0>},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -223,8 +223,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': 'b104d08e480c4f9c844d30b6efeafbf5'},\n",
-       " '_depends_on': ['50748ada1e1641749379395afda9bb5d'],\n",
+       " '_dependencies': {'gas': '215f09a60ecb4b08a6cd600bad468bbd'},\n",
+       " '_depends_on': ['d0d7e6feb43541a690306a1ba6d7e1bb'],\n",
        " 'F': 'ma'}"
       ]
      },
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x11702e3a0>}"
+       "{'gas': <ndi.document.Document at 0x117feb520>}"
       ]
      },
      "execution_count": 14,
@@ -273,7 +273,7 @@
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['82052803e4264932a6bf046740a92e20'],\n",
+       " '_depends_on': ['e18bfee87fc44df8ad20f4fc983a5280'],\n",
        " 'PV': 'nRT'}"
       ]
      },
@@ -294,9 +294,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11702e0a0>,\n",
-       " <ndi.document.Document at 0x11702e520>,\n",
-       " <ndi.document.Document at 0x117044280>]"
+       "[<ndi.document.Document at 0x1180068e0>,\n",
+       " <ndi.document.Document at 0x1180254f0>,\n",
+       " <ndi.document.Document at 0x118025580>]"
       ]
      },
      "execution_count": 16,
@@ -326,8 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '82052803e4264932a6bf046740a92e20'}, '_depends_on': [], 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['82052803e4264932a6bf046740a92e20'], 'PV': 'nRT'}\n"
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['e18bfee87fc44df8ad20f4fc983a5280'], 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'}, '_depends_on': [], 'hello': 'world'}\n"
      ]
     }
    ],
