--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "'11928f465e204e16b775657b77383fc9'"
+       "'7d246a4294634a3eb67824aede616415'"
       ]
      },
      "execution_count": 7,
@@ -112,7 +112,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'},\n",
+       " '_dependencies': {'force': 'cee95f50b97f4ae1a80a6a2bd867a4ea'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -150,7 +150,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'},\n",
+       " '_dependencies': {'force': 'cee95f50b97f4ae1a80a6a2bd867a4ea'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x118248340>}"
+       "{'force': <ndi.document.Document at 0x114338f10>}"
       ]
      },
      "execution_count": 11,
@@ -199,7 +199,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x118248340>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x114338f10>},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -228,8 +228,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': 'a8968ebf42ab447a805986d0bf34567d'},\n",
-       " '_depends_on': ['11928f465e204e16b775657b77383fc9'],\n",
+       " '_dependencies': {'gas': '419c64ee531c4461b4b7682fb6fa5016'},\n",
+       " '_depends_on': ['7d246a4294634a3eb67824aede616415'],\n",
        " 'F': 'ma'}"
       ]
      },
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x1182488b0>}"
+       "{'gas': <ndi.document.Document at 0x1143d1730>}"
       ]
      },
      "execution_count": 14,
@@ -278,7 +278,7 @@
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['b91336f5f45c435c830f6dde9abad4bf'],\n",
+       " '_depends_on': ['cee95f50b97f4ae1a80a6a2bd867a4ea'],\n",
        " 'PV': 'nRT'}"
       ]
      },
@@ -299,12 +299,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11819bbe0>,\n",
-       " <ndi.document.Document at 0x1181d0790>,\n",
-       " <ndi.document.Document at 0x1181d0580>,\n",
-       " <ndi.document.Document at 0x1181d02b0>,\n",
-       " <ndi.document.Document at 0x11826a9a0>,\n",
-       " <ndi.document.Document at 0x11826adc0>]"
+       "[<ndi.document.Document at 0x1143bf250>,\n",
+       " <ndi.document.Document at 0x1143bfe20>,\n",
+       " <ndi.document.Document at 0x1143f3280>]"
       ]
      },
      "execution_count": 16,
@@ -334,11 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '142b9454c51c41cb98bd2ef3a358dcd0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n",
-      "{'_metadata': {'name': '', 'type': 'ndi_file_navigator', 'experiment_id': '', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_file_patterns': ['.*\\\\.wav', '.*\\\\.txt'], 'metadata_file_pattern': '.*\\\\.txt'}\n",
-      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '142b9454c51c41cb98bd2ef3a358dcd0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'}, '_depends_on': [], 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['b91336f5f45c435c830f6dde9abad4bf'], 'PV': 'nRT'}\n"
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'cee95f50b97f4ae1a80a6a2bd867a4ea'}, '_depends_on': [], 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['cee95f50b97f4ae1a80a6a2bd867a4ea'], 'PV': 'nRT'}\n"
      ]
     }
    ],
@@ -349,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
