--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x11f326d60>,\n",
-       "  <ndi.core.Epoch at 0x11f326d90>,\n",
-       "  <ndi.core.Epoch at 0x11f326e50>],\n",
-       " [<ndi.core.Probe at 0x11f326eb0>, <ndi.core.Probe at 0x11f326940>],\n",
-       " [<ndi.core.Channel at 0x11f326850>,\n",
-       "  <ndi.core.Channel at 0x11f2de670>,\n",
-       "  <ndi.core.Channel at 0x11f2de7f0>])"
+       "([<ndi.core.Epoch at 0x10c216f40>,\n",
+       "  <ndi.core.Epoch at 0x109da7790>,\n",
+       "  <ndi.core.Epoch at 0x123110a90>],\n",
+       " [<ndi.core.Probe at 0x1231102b0>, <ndi.core.Probe at 0x123110ee0>],\n",
+       " [<ndi.core.Channel at 0x123110bb0>,\n",
+       "  <ndi.core.Channel at 0x12313a970>,\n",
+       "  <ndi.core.Channel at 0x12313a4c0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x11f2dedf0>,\n",
-       " <ndi.core.Epoch at 0x11f2de190>,\n",
-       " <ndi.core.Epoch at 0x105f88700>]"
+       "[<ndi.core.Epoch at 0x1231476a0>,\n",
+       " <ndi.core.Epoch at 0x123147880>,\n",
+       " <ndi.core.Epoch at 0x1231475e0>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '127b523f097e4474908bd67e85d43cce', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '127b523f097e4474908bd67e85d43cce', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'b04909b8bee14f9d86f040cf6688b607', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'b04909b8bee14f9d86f040cf6688b607', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x11f31a2b0>,\n",
-       " <ndi.core.Channel at 0x11f32daf0>,\n",
-       " <ndi.core.Channel at 0x11f32d040>]"
+       "[<ndi.core.Channel at 0x123050df0>,\n",
+       " <ndi.core.Channel at 0x123050ca0>,\n",
+       " <ndi.core.Channel at 0x123147280>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x105f889a0>]"
+       "[<ndi.core.Probe at 0x1230f69a0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x11eea06a0>\n"
+      "<ndi.context.Context object at 0x1230f6d60>\n"
      ]
     }
    ],
@@ -286,9 +286,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
-       " 'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
-       " 'gambino': '6b9d956b266e4f27b23f57936fb02166'}"
+       "{'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
+       " 'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
+       " 'gambino': '256e5d257d3b4f59a05682dafc0e55a3'}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "['e48492e939c74091bf7c657bb9f97364']"
+       "['02f6886b69ee49098c76837ba86aab04']"
       ]
      },
      "execution_count": 18,
@@ -330,9 +330,9 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df',\n",
-       "  'parent_id': 'e48492e939c74091bf7c657bb9f97364',\n",
-       "  'asc_path': ',e48492e939c74091bf7c657bb9f97364',\n",
+       "  'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0',\n",
+       "  'parent_id': '02f6886b69ee49098c76837ba86aab04',\n",
+       "  'asc_path': ',02f6886b69ee49098c76837ba86aab04',\n",
        "  'version_depth': 1,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
@@ -349,7 +349,7 @@
    "source": [
     "og_doc.data['number'] = 0\n",
     "og_doc.save_updates()\n",
-    "exp.ctx.find_by_id(og_doc.id).data"
+    "exp.ctx.db.find_by_id(og_doc.id).data"
    ]
   },
   {
@@ -362,15 +362,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df',\n",
+       "  'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': False},\n",
-       " '_dependencies': {'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
-       "  'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
-       "  'gambino': '6b9d956b266e4f27b23f57936fb02166'},\n",
-       " '_depends_on': ['7f8b45bfcd5a4086ba15f5fb7a0173df'],\n",
+       " '_dependencies': {'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
+       "  'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
+       "  'gambino': '256e5d257d3b4f59a05682dafc0e55a3'},\n",
+       " '_depends_on': ['fd72c77052a944719c4251fb1b89c4e0'],\n",
        " 'number': 0,\n",
        " 'trait': 'realest'}"
       ]
@@ -393,9 +393,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
-       " 'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
-       " 'gambino': '6b9d956b266e4f27b23f57936fb02166'}"
+       "{'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
+       " 'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
+       " 'gambino': '256e5d257d3b4f59a05682dafc0e55a3'}"
       ]
      },
      "execution_count": 21,
@@ -416,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x1227a5130>}\n",
+      "{'og': <ndi.document.Document object at 0x1265be970>}\n",
       "---\n",
-      "['dre_v0', 'og_v0', 'm&m_v0', 'og_v1', 'gambino_v0']\n"
+      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
      ]
     }
    ],
