--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "exp = Experiment('test_experiment').connect(\n",
-    "    directory='./some/path/',\n",
+    "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    daq_systems=daqs,\n",
@@ -110,9 +110,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x10a9129d0>,\n",
-       " <ndi.core.Probe at 0x1238236d0>,\n",
-       " <ndi.core.Probe at 0x123823520>]"
+       "[<ndi.core.Probe at 0x123a56e50>,\n",
+       " <ndi.core.Probe at 0x123a56b50>,\n",
+       " <ndi.core.Probe at 0x123a56e20>]"
       ]
      },
      "execution_count": 9,
@@ -154,9 +154,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1238568b0>,\n",
-       " <ndi.document.Document at 0x123856cd0>,\n",
-       " <ndi.document.Document at 0x123823fd0>]"
+       "[<ndi.document.Document at 0x123a48b50>,\n",
+       " <ndi.document.Document at 0x123a8bbb0>,\n",
+       " <ndi.document.Document at 0x123a6f040>]"
       ]
      },
      "execution_count": 11,
@@ -177,23 +177,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x123856fa0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123856700>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123865490>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123865550>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x1238656a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123865580>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f8e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6fdc0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6faf0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f970>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6fbe0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f7c0>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x123856fa0>,\n",
-       " <ndi.core.Channel at 0x123856700>,\n",
-       " <ndi.core.Channel at 0x123865490>,\n",
-       " <ndi.core.Channel at 0x123865550>,\n",
-       " <ndi.core.Channel at 0x1238656a0>,\n",
-       " <ndi.core.Channel at 0x123865580>]"
+       "[<ndi.core.Channel at 0x123a6f8e0>,\n",
+       " <ndi.core.Channel at 0x123a6fdc0>,\n",
+       " <ndi.core.Channel at 0x123a6faf0>,\n",
+       " <ndi.core.Channel at 0x123a6f970>,\n",
+       " <ndi.core.Channel at 0x123a6fbe0>,\n",
+       " <ndi.core.Channel at 0x123a6f7c0>]"
       ]
      },
      "execution_count": 12,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x123856310>, <ndi.core.Epoch at 0x123856a00>]"
+       "[<ndi.core.Epoch at 0x123a8b220>, <ndi.core.Epoch at 0x123a8b3a0>]"
       ]
      },
      "execution_count": 14,
@@ -259,13 +259,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'e024736bbb274794b9529934f303a8ec',\n",
+       "  'experiment_id': '14ba025e163b4d8ba8cf53e58eb15f34',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['e024736bbb274794b9529934f303a8ec'],\n",
+       " '_depends_on': ['14ba025e163b4d8ba8cf53e58eb15f34'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -275,7 +275,7 @@
     }
    ],
    "source": [
-    "exp.ctx.find_by_id(doc.id).data"
+    "exp.ctx.db.find_by_id(doc.id).data"
    ]
   },
   {
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x123865be0>}"
+       "{'doc': <ndi.document.Document at 0x123a88f70>}"
       ]
      },
      "execution_count": 17,
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "774861d399c74af9bd3809ea9221eade\n"
+      "ccdd6da6b8b74a28adc6ca9feb6abfeb\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'e024736bbb274794b9529934f303a8ec',\n",
+       "  'experiment_id': '14ba025e163b4d8ba8cf53e58eb15f34',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -445,7 +445,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '32fbab9b4f50433eb69230c7baf5b13a',\n",
+       "  'experiment_id': 'fb25f157b8814adb830dae53dbef09db',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
