add/fix relationships & ctx setters

--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -110,9 +110,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x123a56e50>,\n",
-       " <ndi.core.Probe at 0x123a56b50>,\n",
-       " <ndi.core.Probe at 0x123a56e20>]"
+       "[<ndi.core.Probe at 0x106c0cca0>,\n",
+       " <ndi.core.Probe at 0x106c0ca60>,\n",
+       " <ndi.core.Probe at 0x106c0cc40>]"
       ]
      },
      "execution_count": 9,
@@ -154,9 +154,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x123a48b50>,\n",
-       " <ndi.document.Document at 0x123a8bbb0>,\n",
-       " <ndi.document.Document at 0x123a6f040>]"
+       "[<ndi.core.Channel at 0x11fb45a60>,\n",
+       " <ndi.core.Channel at 0x11fb45580>,\n",
+       " <ndi.core.Channel at 0x11fb45220>]"
       ]
      },
      "execution_count": 11,
@@ -177,23 +177,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f8e0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6fdc0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6faf0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f970>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6fbe0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x123a6f7c0>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x106c0c820>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x106c0cb20>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x106c0c940>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x112dd9340>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11fb282e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11fb28fd0>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x123a6f8e0>,\n",
-       " <ndi.core.Channel at 0x123a6fdc0>,\n",
-       " <ndi.core.Channel at 0x123a6faf0>,\n",
-       " <ndi.core.Channel at 0x123a6f970>,\n",
-       " <ndi.core.Channel at 0x123a6fbe0>,\n",
-       " <ndi.core.Channel at 0x123a6f7c0>]"
+       "[<ndi.core.Channel at 0x106c0c820>,\n",
+       " <ndi.core.Channel at 0x106c0cb20>,\n",
+       " <ndi.core.Channel at 0x106c0c940>,\n",
+       " <ndi.core.Channel at 0x112dd9340>,\n",
+       " <ndi.core.Channel at 0x11fb282e0>,\n",
+       " <ndi.core.Channel at 0x11fb28fd0>]"
       ]
      },
      "execution_count": 12,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x123a8b220>, <ndi.core.Epoch at 0x123a8b3a0>]"
+       "[<ndi.core.Epoch at 0x11fb45610>, <ndi.core.Epoch at 0x11fb45ca0>]"
       ]
      },
      "execution_count": 14,
@@ -259,13 +259,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '14ba025e163b4d8ba8cf53e58eb15f34',\n",
+       "  'experiment_id': '7bedd384549348b5ab466af8b59580aa',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['14ba025e163b4d8ba8cf53e58eb15f34'],\n",
+       " '_depends_on': ['7bedd384549348b5ab466af8b59580aa'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x123a88f70>}"
+       "{'doc': <ndi.document.Document at 0x11fb5f370>}"
       ]
      },
      "execution_count": 17,
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ccdd6da6b8b74a28adc6ca9feb6abfeb\n"
+      "641d26104c064499871b5cf8b1254f8a\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '14ba025e163b4d8ba8cf53e58eb15f34',\n",
+       "  'experiment_id': '7bedd384549348b5ab466af8b59580aa',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -445,7 +445,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'fb25f157b8814adb830dae53dbef09db',\n",
+       "  'experiment_id': '6c4d0be6c95c4aa58890501a8ed8c375',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
