--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x10c216f40>,\n",
-       "  <ndi.core.Epoch at 0x109da7790>,\n",
-       "  <ndi.core.Epoch at 0x123110a90>],\n",
-       " [<ndi.core.Probe at 0x1231102b0>, <ndi.core.Probe at 0x123110ee0>],\n",
-       " [<ndi.core.Channel at 0x123110bb0>,\n",
-       "  <ndi.core.Channel at 0x12313a970>,\n",
-       "  <ndi.core.Channel at 0x12313a4c0>])"
+       "([<ndi.core.Epoch at 0x127954910>,\n",
+       "  <ndi.core.Epoch at 0x12791fe50>,\n",
+       "  <ndi.core.Epoch at 0x1279e64c0>],\n",
+       " [<ndi.core.Probe at 0x1279e6310>, <ndi.core.Probe at 0x1279e6580>],\n",
+       " [<ndi.core.Channel at 0x1279e61c0>,\n",
+       "  <ndi.core.Channel at 0x127a0b760>,\n",
+       "  <ndi.core.Channel at 0x127a0b3d0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x1231476a0>,\n",
-       " <ndi.core.Epoch at 0x123147880>,\n",
-       " <ndi.core.Epoch at 0x1231475e0>]"
+       "[<ndi.core.Epoch at 0x1279e6610>,\n",
+       " <ndi.core.Epoch at 0x12758e5b0>,\n",
+       " <ndi.core.Epoch at 0x1279c38b0>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'b04909b8bee14f9d86f040cf6688b607', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'b04909b8bee14f9d86f040cf6688b607', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '0a262998ca9849a9a1adb86adefa2973', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'eee07d4d076e4735b24b105c526512f4', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '0a262998ca9849a9a1adb86adefa2973', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'eee07d4d076e4735b24b105c526512f4', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x123050df0>,\n",
-       " <ndi.core.Channel at 0x123050ca0>,\n",
-       " <ndi.core.Channel at 0x123147280>]"
+       "[<ndi.core.Channel at 0x10e674c40>,\n",
+       " <ndi.core.Channel at 0x12758e460>,\n",
+       " <ndi.core.Channel at 0x127a16340>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x1230f69a0>]"
+       "[<ndi.core.Probe at 0x1279c3400>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.context.Context object at 0x1230f6d60>\n"
+      "<ndi.context.Context object at 0x1279c3df0>\n"
      ]
     }
    ],
@@ -286,9 +286,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
-       " 'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
-       " 'gambino': '256e5d257d3b4f59a05682dafc0e55a3'}"
+       "{'dre': 'fe3ab86e0f214243ae1dc5832899d6a7',\n",
+       " 'm&m': '500a0ebba99d4f75a9d7b3ea5ecb1fc8',\n",
+       " 'gambino': 'd6bede2610ba41a489efd0a1a5d458c6'}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "['02f6886b69ee49098c76837ba86aab04']"
+       "['262b6e4f27264c4dac5c4e6397e479ed']"
       ]
      },
      "execution_count": 18,
@@ -330,9 +330,9 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0',\n",
-       "  'parent_id': '02f6886b69ee49098c76837ba86aab04',\n",
-       "  'asc_path': ',02f6886b69ee49098c76837ba86aab04',\n",
+       "  'experiment_id': '0a262998ca9849a9a1adb86adefa2973',\n",
+       "  'parent_id': '262b6e4f27264c4dac5c4e6397e479ed',\n",
+       "  'asc_path': ',262b6e4f27264c4dac5c4e6397e479ed',\n",
        "  'version_depth': 1,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
@@ -362,15 +362,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': 'fd72c77052a944719c4251fb1b89c4e0',\n",
+       "  'experiment_id': '0a262998ca9849a9a1adb86adefa2973',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': False},\n",
-       " '_dependencies': {'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
-       "  'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
-       "  'gambino': '256e5d257d3b4f59a05682dafc0e55a3'},\n",
-       " '_depends_on': ['fd72c77052a944719c4251fb1b89c4e0'],\n",
+       " '_dependencies': {'dre': 'fe3ab86e0f214243ae1dc5832899d6a7',\n",
+       "  'm&m': '500a0ebba99d4f75a9d7b3ea5ecb1fc8',\n",
+       "  'gambino': 'd6bede2610ba41a489efd0a1a5d458c6'},\n",
+       " '_depends_on': ['0a262998ca9849a9a1adb86adefa2973'],\n",
        " 'number': 0,\n",
        " 'trait': 'realest'}"
       ]
@@ -393,9 +393,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '908b7341517a4faf9e36e8bf14d4b627',\n",
-       " 'm&m': '3eb417e7268744308d99b24c7f3af039',\n",
-       " 'gambino': '256e5d257d3b4f59a05682dafc0e55a3'}"
+       "{'dre': 'fe3ab86e0f214243ae1dc5832899d6a7',\n",
+       " 'm&m': '500a0ebba99d4f75a9d7b3ea5ecb1fc8',\n",
+       " 'gambino': 'd6bede2610ba41a489efd0a1a5d458c6'}"
       ]
      },
      "execution_count": 21,
@@ -413,12 +413,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'og': <ndi.document.Document object at 0x1265be970>}\n",
-      "---\n",
-      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'with_ctx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-d014a187cc61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_document_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'---'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m print([\n\u001b[1;32m      4\u001b[0m     \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_v'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'version_depth'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_metadata.type'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'rapper'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/core.py\u001b[0m in \u001b[0;36mget_document_dependencies\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    605\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    606\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_document_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 607\u001b[0;31m         return [\n\u001b[0m\u001b[1;32m    608\u001b[0m             \u001b[0mdoc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_ctx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdocument\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/core.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    606\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_document_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m         return [\n\u001b[0;32m--> 608\u001b[0;31m             \u001b[0mdoc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_ctx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    609\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdocument\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m         ]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'with_ctx'"
      ]
     }
    ],
@@ -433,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,19 +446,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "---\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(exp.current.get_document_dependencies())\n",
     "print('---')\n",
