--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x105cd5460>,\n",
-       " <ndi.core.Probe at 0x105cd5d00>,\n",
-       " <ndi.core.Probe at 0x105cd5220>]"
+       "[<ndi.core.Probe at 0x11db755b0>,\n",
+       " <ndi.core.Probe at 0x11db753d0>,\n",
+       " <ndi.core.Probe at 0x11db753a0>]"
       ]
      },
      "execution_count": 9,
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11f016ca0>,\n",
-       " <ndi.document.Document at 0x11f07fb50>,\n",
-       " <ndi.document.Document at 0x11f07fc10>]"
+       "[<ndi.core.Channel at 0x12ad01730>,\n",
+       " <ndi.core.Channel at 0x12ad08be0>,\n",
+       " <ndi.core.Channel at 0x12ad08820>]"
       ]
      },
      "execution_count": 12,
@@ -192,23 +192,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x11efea7f0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x111ee74f0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x111ee72e0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11f0ba9d0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11f0bafa0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11f0bac70>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad2cb80>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad01fa0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad086a0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad2c8b0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad2c700>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ad2cee0>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x11efea7f0>,\n",
-       " <ndi.core.Channel at 0x111ee74f0>,\n",
-       " <ndi.core.Channel at 0x111ee72e0>,\n",
-       " <ndi.core.Channel at 0x11f0ba9d0>,\n",
-       " <ndi.core.Channel at 0x11f0bafa0>,\n",
-       " <ndi.core.Channel at 0x11f0bac70>]"
+       "[<ndi.core.Channel at 0x12ad2cb80>,\n",
+       " <ndi.core.Channel at 0x12ad01fa0>,\n",
+       " <ndi.core.Channel at 0x12ad086a0>,\n",
+       " <ndi.core.Channel at 0x12ad2c8b0>,\n",
+       " <ndi.core.Channel at 0x12ad2c700>,\n",
+       " <ndi.core.Channel at 0x12ad2cee0>]"
       ]
      },
      "execution_count": 13,
@@ -237,9 +237,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11f078550>,\n",
-       " <ndi.document.Document at 0x11f0787c0>,\n",
-       " <ndi.document.Document at 0x11f0ad1c0>]"
+       "[<ndi.core.Channel at 0x12ad3eeb0>,\n",
+       " <ndi.core.Channel at 0x12ad3ef70>,\n",
+       " <ndi.core.Channel at 0x12ad3efa0>]"
       ]
      },
      "execution_count": 15,
@@ -255,39 +255,34 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ndi.core.Channel'>\n",
+      "{'raw_data_directory': '../tests/data/intracell_example', 'database': <ndi.database.sql.SQL object at 0x12a8bd8b0>, 'binary_collection': <ndi.database.file_system.BinaryCollection object at 0x12ac9d910>, 'daq_systems': [<ndi.core.DaqSystem object at 0x12ac9dfd0>, <ndi.core.DaqSystem object at 0x12ac9df40>], 'daq_readers_map': {'MockReader': <class 'ndi.daqreaders.mock_daq_reader.MockReader'>}}\n",
+      "<class 'ndi.core.Channel'>\n",
+      "{'raw_data_directory': '../tests/data/intracell_example', 'database': <ndi.database.sql.SQL object at 0x12a8bd8b0>, 'binary_collection': <ndi.database.file_system.BinaryCollection object at 0x12ac9d910>, 'daq_systems': [<ndi.core.DaqSystem object at 0x12ac9dfd0>, <ndi.core.DaqSystem object at 0x12ac9df40>], 'daq_readers_map': {'MockReader': <class 'ndi.daqreaders.mock_daq_reader.MockReader'>}}\n",
+      "<class 'ndi.core.Channel'>\n",
+      "{'raw_data_directory': '../tests/data/intracell_example', 'database': <ndi.database.sql.SQL object at 0x12a8bd8b0>, 'binary_collection': <ndi.database.file_system.BinaryCollection object at 0x12ac9d910>, 'daq_systems': [<ndi.core.DaqSystem object at 0x12ac9dfd0>, <ndi.core.DaqSystem object at 0x12ac9df40>], 'daq_readers_map': {'MockReader': <class 'ndi.daqreaders.mock_daq_reader.MockReader'>}}\n"
+     ]
+    }
+   ],
    "source": [
-    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
-    "exp.add_document(doc)"
+    "for c in epoch.get_channels():\n",
+    "    print(type(c))\n",
+    "    print(c.ctx.__dict__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'doc',\n",
-       "  'type': 'independent',\n",
-       "  'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': ['9ef4e27a2a19489c92c757d64c7bd979'],\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exp.ctx.db.find_by_id(doc.id).data"
+    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
+    "exp.add_document(doc)"
    ]
   },
   {
@@ -298,10 +293,39 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11f0c1b50>}"
+       "{'_metadata': {'name': 'doc',\n",
+       "  'type': 'independent',\n",
+       "  'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': ['874c5180856448fa8b71f3c058661bbe'],\n",
+       " 'hello': 'world'}"
       ]
      },
      "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.ctx.db.find_by_id(doc.id).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doc': <ndi.document.Document at 0x12ad3ecd0>}"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a34c3a7a28e94cfaa69ade426ef23b8f\n"
+      "69b949b27e7d456196d91ef768c6578e\n"
      ]
     }
    ],
@@ -330,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +363,7 @@
        "{}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +385,7 @@
        "'This object has been deleted.'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -387,17 +411,17 @@
       "text/plain": [
        "[{'_metadata': {'name': 'list-doc',\n",
        "   'type': '',\n",
-       "   'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
+       "   'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
        "   'latest_version': True},\n",
        "  '_dependencies': {},\n",
-       "  '_depends_on': ['9ef4e27a2a19489c92c757d64c7bd979'],\n",
+       "  '_depends_on': ['874c5180856448fa8b71f3c058661bbe'],\n",
        "  'list': ['abc', 'def', 'ghi']}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -425,16 +449,16 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '9ef4e27a2a19489c92c757d64c7bd979',\n",
+       "  'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'list-doc': '43e9a5900f824d5698350f60a855d7d8'},\n",
+       " '_dependencies': {'list-doc': '5b88e512f6a54ffaa8f3f0c594fd0878'},\n",
        " '_depends_on': []}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +481,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_abacadaba',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '00756d55432449a4b80414256706e7d0',\n",
+       "  'experiment_id': '9a6d6759042c4353a89c28802457a6c5',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -466,7 +490,7 @@
        " '_depends_on': []}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
