--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('./test_db')\n",
+    "db = Database('../test_db')\n",
     "destroy_everything_in(db)"
    ]
   },
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc = BinaryCollection('./test_db', name='demo')"
+    "bc = BinaryCollection('../test_db', name='demo')"
    ]
   },
   {
