--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc = BinaryCollection('./test_db', name='demo')"
+    "bc = BinaryCollection('../test_db', name='demo')"
    ]
   },
   {
