--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -80,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "'d0d7e6feb43541a690306a1ba6d7e1bb'"
+       "'cc0600017f4e413d933ef3d01f66a895'"
       ]
      },
      "execution_count": 7,
@@ -107,7 +107,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'},\n",
+       " '_dependencies': {'force': '80ab2c2d902d4b8eb395c442d698c58d'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -145,7 +145,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'},\n",
+       " '_dependencies': {'force': '80ab2c2d902d4b8eb395c442d698c58d'},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x10bdf4df0>}"
+       "{'force': <ndi.document.Document at 0x11101e940>}"
       ]
      },
      "execution_count": 11,
@@ -194,7 +194,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x10bdf4df0>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x11101e940>},\n",
        " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
@@ -223,8 +223,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': '215f09a60ecb4b08a6cd600bad468bbd'},\n",
-       " '_depends_on': ['d0d7e6feb43541a690306a1ba6d7e1bb'],\n",
+       " '_dependencies': {'gas': 'ff15799434fa4d55a286a841ff2e81d0'},\n",
+       " '_depends_on': ['cc0600017f4e413d933ef3d01f66a895'],\n",
        " 'F': 'ma'}"
       ]
      },
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x117feb520>}"
+       "{'gas': <ndi.document.Document at 0x104e43c10>}"
       ]
      },
      "execution_count": 14,
@@ -273,7 +273,7 @@
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['e18bfee87fc44df8ad20f4fc983a5280'],\n",
+       " '_depends_on': ['80ab2c2d902d4b8eb395c442d698c58d'],\n",
        " 'PV': 'nRT'}"
       ]
      },
@@ -294,9 +294,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1180068e0>,\n",
-       " <ndi.document.Document at 0x1180254f0>,\n",
-       " <ndi.document.Document at 0x118025580>]"
+       "[<ndi.document.Document at 0x104e43490>,\n",
+       " <ndi.document.Document at 0x1110402e0>,\n",
+       " <ndi.document.Document at 0x111040640>]"
       ]
      },
      "execution_count": 16,
@@ -326,8 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['e18bfee87fc44df8ad20f4fc983a5280'], 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'e18bfee87fc44df8ad20f4fc983a5280'}, '_depends_on': [], 'hello': 'world'}\n"
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['80ab2c2d902d4b8eb395c442d698c58d'], 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '80ab2c2d902d4b8eb395c442d698c58d'}, '_depends_on': [], 'hello': 'world'}\n"
      ]
     }
    ],
