Updated Demo_Binary_Collection and removed bin files

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create SQL database object passing in a connection string\n",
     "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
     "destroy_everything_in(db)"
    ]
@@ -54,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating/connecting to a binary collection on disk\n",
+    "# Creating/connecting to a binary collection on disk providing a directory to store binary files and a name\n",
     "bc = BinaryCollection('./test_db', name='demo')"
    ]
   },
@@ -65,7 +66,8 @@
    "outputs": [],
    "source": [
     "# Creating experiment object and connecting it to database and binary collection\n",
-    "e = Experiment('test_experiment','../tests/data/intracell_example').connect(\n",
+    "e = Experiment('test_experiment').connect(\n",
+    "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc\n",
     ")"
@@ -93,7 +95,7 @@
     "# Opening a write stream object\n",
     "ws = doc.binary.open_write_stream()\n",
     "\n",
-    "# Writing values into write stream object\n",
+    "# Writing values into write stream object, write method only accepts bytes objects\n",
     "for i in range(5):\n",
     "    ws.write(struct.pack('d', i))\n",
     "for i in reversed(range(11)):\n",
@@ -180,9 +182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('ndi-python': pipenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37464bitndipythonpipenv1a7e5035b8354ebf875fc2219ee4cc91"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
